<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DinnerPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="header">Dinner Planner</string>
    <string name="start_text">Welcome to Dinner Planner! \n \nHere you will be able to easily plan your dinner.\n\nOn the next page start by selecting number of participants. Then select your courses. \n\nWatch Magic Happen!</string>
    <string name="button_start">Start</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="menu_participants">Participants</string>
    <string name="default_participants">1</string>
    <string name="menu_cost">Total Cost: </string>
    <string name="menu_choose">Choose Menu</string>
    <string name="menu_create">Create</string>
    <string name="default_price">0 SEK</string>
    <string name="starter">Starter</string>
    <string name="maincourse">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="dish_name_placeholder">Super Dish</string>
    <string name="starter_name">Toast</string>
    <string name="main_name">Chicken</string>
    <string name="dessert_name">Ice Cream</string>
    <string name="default_ingredient_name">Ingredient</string>
    <string name="default_ingredient_quantity">100 g</string>
    <string name="default_ingredient_price">10 SEK</string>
    <string name="back">Back</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="dish_name"></string>
    <string name="dish_type"></string>
    <string name="dish_instruction"></string>
    <string name="default_cost_person">(20 SEK / Person)</string>
    <string name="dish_choose">Choose</string>

</resources>
