<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@layout/dish_instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
    	android:id="@+id/text_type_of_dish"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textStyle="bold"
        android:text="@string/dish_type" />
    
    <TextView
    	android:id="@+id/text_name_of_dish"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textStyle="italic"
        android:text="@string/dish_name" />
    
    <TextView
    	android:id="@+id/text_dish_instruction"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:scrollbars = "vertical"
        android:text="@string/dish_instruction" />
    
</LinearLayout>
