<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@layout/activity_choose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChooseActivity" >

    <RelativeLayout
        android:id="@+id/menu_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/text_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_cost" />

            <TextView
                android:id="@+id/text_cost_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/text_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_participants" />

            <EditText
                android:id="@+id/number_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="@string/default_participants" >

            </EditText>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_menu_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_choose"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/menu_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
        
        <LinearLayout
		    android:id="@layout/dish_selection"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		
		    <LinearLayout
		        android:id="@+id/layout_starter"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		
		        <TextView
		            android:id="@+id/starter_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/starter"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <HorizontalScrollView
		            android:id="@+id/starter_slider"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content" >
		
		            <LinearLayout
		                android:id = "@+id/starter_list"
		                android:layout_width="match_parent"
		                android:layout_height="match_parent"
		                android:orientation="horizontal" >
		            </LinearLayout>
		        </HorizontalScrollView>
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:id="@+id/layout_maincourse"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		
		        <TextView
		            android:id="@+id/maincourse_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/maincourse"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <HorizontalScrollView
		            android:id="@+id/maincoursemaincoursemaincourse_slider"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content" >
		
		            <LinearLayout
		                android:id = "@+id/main_list"
		                android:layout_width="match_parent"
		                android:layout_height="match_parent"
		                android:orientation="horizontal" >
		            </LinearLayout>
		        </HorizontalScrollView>
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:id="@+id/layout_dessert"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		
		        <TextView
		            android:id="@+id/dessert_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/dessert"
		            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		        <HorizontalScrollView
		            android:id="@+id/dessert_slider"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content" >
		
		            <LinearLayout
		                android:id= "@+id/dessert_list"
		                android:layout_width="match_parent"
		                android:layout_height="match_parent"
		                android:orientation="horizontal" >
		            </LinearLayout>
		        </HorizontalScrollView>
		
		    </LinearLayout>
		
		</LinearLayout>
        
    </ScrollView>

    <Button
        android:id="@+id/menu_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/menu_create" />
</LinearLayout>
