<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@layout/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/button_back"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="left|center_vertical"
		    android:text="@string/back" />

       <TextView
           android:id="@+id/TextView01"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:layout_marginRight="@dimen/activity_horizontal_margin"
           android:layout_weight="1"
           android:gravity="right"
           android:text="@string/menu_cost"
           android:textAppearance="?android:attr/textAppearanceLarge" />

    	<TextView
    	    android:id="@+id/text_menu_price"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right|center_vertical"
    	    android:text="@string/default_price"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />
    
	</LinearLayout>
       
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false" >

    	<LinearLayout
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="left|center_vertical"
    	    android:layout_weight="1"
    	    android:orientation="vertical" >

    		<ImageButton
    		    android:id="@+id/ingredients"
    		    android:layout_width="@dimen/button_size"
    		    android:layout_height="@dimen/button_size"
    		    android:contentDescription="@string/ingredients"
    		    android:scaleType="fitXY"
    		    android:src="@drawable/ingredient" />

    		<TextView
    		    android:id="@+id/text_ingredient"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/ingredients" />

    	</LinearLayout>

    	<LinearLayout
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical" >

    		<TextView
    		    android:id="@+id/text_instructions"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_gravity="center_vertical|center_horizontal"
    		    android:text="@string/instructions" />

    		<LinearLayout
    		    android:layout_width="wrap_content"
    		    android:layout_height="match_parent" >

    			<LinearLayout
    			    android:layout_width="wrap_content"
    			    android:layout_height="wrap_content"
    			    android:orientation="vertical" >

    			    <ImageButton
    			        android:id="@+id/starterdish"
    			        android:layout_width="@dimen/button_size"
    			        android:layout_height="@dimen/button_size"
    			        android:adjustViewBounds="true"
    			        android:contentDescription="@string/starter"
    			        android:scaleType="centerCrop"
    			        android:src="@drawable/toast" />

    			    <TextView
    			        android:id="@+id/text_menu_startername"
    			        android:layout_width="wrap_content"
    			        android:layout_height="wrap_content"
    			        android:layout_gravity="center_horizontal"
    			        android:text="@string/starter" />

    			</LinearLayout>

    			<LinearLayout
    			    android:layout_width="wrap_content"
    			    android:layout_height="wrap_content"
    			    android:orientation="vertical" >

    			    <ImageButton
    			        android:id="@+id/maindish"
    			        android:layout_width="@dimen/button_size"
    			        android:layout_height="@dimen/button_size"
    			        android:layout_gravity="center_horizontal"
    			        android:contentDescription="@string/maincourse"
    			        android:scaleType="centerCrop"
    			        android:src="@drawable/meatballs" />

    			    <TextView
    			        android:id="@+id/text_menu_mainname"
    			        android:layout_width="wrap_content"
    			        android:layout_height="wrap_content"
    			        android:layout_gravity="center_horizontal"
    			        android:text="@string/maincourse" />

    			</LinearLayout>

    			<LinearLayout
    			    android:layout_width="wrap_content"
    			    android:layout_height="wrap_content"
    			    android:orientation="vertical" >

    			    <ImageButton
    			        android:id="@+id/dessertdish"
    			        android:layout_width="@dimen/button_size"
    			        android:layout_height="@dimen/button_size"
    			        android:layout_gravity="center_horizontal"
    			        android:contentDescription="@string/dessert"
    			        android:scaleType="centerCrop"
    			        android:src="@drawable/icecream" />

    			    <TextView
    			        android:id="@+id/text_menu_dessertname"
    			        android:layout_width="wrap_content"
    			        android:layout_height="wrap_content"
    			        android:layout_gravity="center_horizontal"
    			        android:text="@string/dessert" />

    			</LinearLayout>

    		</LinearLayout>

    	</LinearLayout>
    
	</LinearLayout>
	
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginBottom="@dimen/activity_vertical_margin"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
	    android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:background="@android:color/black" />

	<RelativeLayout
	    android:id="@+id/info_scroll"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >

	</RelativeLayout>
    
</LinearLayout>
