<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

       <Button
           android:id="@+id/button1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Back" />

       <TextView
           android:id="@+id/TextView01"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="50dp"
           android:text="Total Cost:"
           android:textAppearance="?android:attr/textAppearanceLarge" />

    	<TextView
        	android:id="@+id/text_menu_price"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp"
        	android:text="@string/default_price"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    
	</LinearLayout>
	
       <TextView
        android:id="@+id/text_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:text="Instructions" />
       
	<LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="20dp" >

    	<ImageButton
        	android:id="@+id/ingrediens"
        	android:layout_width="@dimen/button_size"
        	android:layout_height="@dimen/button_size"
        	android:src="@drawable/dish_placeholder" />

    	<ImageButton
        	android:id="@+id/starterdish"
        	android:layout_width="@dimen/button_size"
        	android:layout_height="@dimen/button_size"
        	android:layout_marginLeft="40dp"
        	android:src="@drawable/toast" />

    	<ImageButton
        	android:id="@+id/maindish"
        	android:layout_width="@dimen/button_size"
        	android:layout_height="@dimen/button_size"
        	android:src="@drawable/meatballs" />

    	<ImageButton
        	android:id="@+id/dessertdish"
        	android:layout_width="@dimen/button_size"
        	android:layout_height="@dimen/button_size"
        	android:src="@drawable/icecream" />
    
    </LinearLayout> 
    
   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    	
    <TextView
        android:id="@+id/text_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Ingredients" />	

    <TextView
        android:id="@+id/text_menu_startername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/starter_name"/>
    
    <TextView
        android:id="@+id/text_menu_mainname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/main_name"/>
    
    <TextView
        android:id="@+id/text_menu_dessertname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/dessert_name"/>
    
	</LinearLayout>
	
	<View
 		android:layout_width="match_parent"
 		android:layout_height="0.5dp"
 		android:background="@android:color/black"
 		android:layout_marginLeft="40dp"
 		android:layout_marginRight="40dp"
 		android:layout_marginTop="2dp"
 		android:layout_marginBottom="10dp" />
	
	<ScrollView
        android:id="@+id/info_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
        
        <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/dish_instructions" />
        
    </ScrollView>
	
</LinearLayout>
